--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@upstash/ratelimit": "^1.1.3",
+    "@vercel/kv": "^1.0.1",
     "ai": "^3.0.24",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
