next-auth upated and modified

--- a/.env.sample
+++ b/.env.sample
@@ -3,12 +3,21 @@ ACCESS_TOKEN_EXPIRY=
 DOMAIN=
 PORT=
 MONGODB_URI=
+
+# RESEND EMAIL SERVICE
 RESEND_API_KEY=
+
+# NEXT AUTH
 NEXT_AUTH_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# OPEN AI
 OPENAI_API_KEY=
 
 # Rate Limiting
-
 KV_URL=
 KV_REST_API_URL=
 KV_REST_API_TOKEN=
