--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "lucide-react": "^0.372.0",
     "mongoose": "^8.3.1",
     "next": "14.1.4",
